--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <title>Jai Hind Security Services and Allied Services</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 </head>
 <body>
 
- <header>
+ <header id="header">
    <nav class="navbar navbar-expand-lg">
     <div class="container">
      <a class="navbar-brand" href="#"><img src="images/jhsas_logo.png" alt="JHSSAS"/></a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuDropdown"><span class="navbar-toggler-icon"></span></button>
      <div class="collapse navbar-collapse" id="menuDropdown">
        <ul class="navbar-nav d-flex justify-content-end w-100">
-         <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-         <li class="nav-item"><a href="#" class="nav-link">Our Clients</a></li>
+         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+         <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
+         <li class="nav-item"><a href="#" class="nav-link">Our Services</a></li>
          <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
        </ul>
      </div>
@@ -28,26 +32,84 @@
  </header>
 
  <section class="banner p-0">
-  <div class="container-fluid">
+  <div class="container">
    <div class="carousel slide" data-bs-ride="carousel">
      <div class="carousel-inner">
-      <div class="carousel-item active">
-       <img src="images/jhsas_banner_1.jpg" alt="Banner-1" class="img-fluid"/>
-      </div>
-      <div class="carousel-item">
-       <img src="images/jhsas_banner_1.jpg" alt="Banner-2" class="img-fluid"/>
+      <div class="carousel-item active p-4">
+       <div class="row align-items-center">
+        <div class="col-md-5">
+          <div class="intro">
+            <h1>Your Security is our priority.</h1>
+            <p>Lorem ipusm dolor sit amet constructor.</p>
+            <a href="/contact-us.html" class="btn btn-primary px-4 py-2">Contact Us</a>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <img src="images/jhsas_banner_1.jpg" alt="Banner-1" class="img-fluid"/>
+        </div>
+       </div>
       </div>
      </div>
    </div>
   </div>
  </section>
 
+<section class="enquiry_now_sec">
+ <div class="container">
+  <div class="enquiry_form_wrap">
+   <div class="heading text-center">
+    <h2>CONTACT US FOR INQUIRY</h2>
+   </div>
+   <div class="enquiry_form mt-4">
+    <form>
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="text" name="fname" placeholder="First Name" class="form-control" required/>
+            <label>First Name</label>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="text" name="lname" placeholder="Last Name" class="form-control" required/>
+            <label>Last Name</label>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="email" name="email" placeholder="Email" class="form-control" required/>
+            <label>Email</label>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="tel" name="phone" placeholder="Phone" class="form-control" required/>
+            <label>Phone</label>
+          </div>
+        </div>
+        <div class="col-12 mb-4">
+          <div class="form-floating">
+            <textarea name="message" placeholder="Message" class="form-control"></textarea>
+            <label>Message</label>
+          </div>
+        </div>
+        <div class="col-12 text-center">
+          <button class="btn btn-primary px-5 py-2">Submit</button>
+        </div>
+
+      </div>
+    </form>
+   </div>
+  </div>
+ </div>
+</section>
+
 <section class="about_us">
  <div class="container">
    <div class="row">
     <div class="col-md-5"></div>
     <div class="col-md-7">
-      <div class="heading">
+      <div class="heading mb-3">
         <h2>About US</h2>
       </div>
     </div>
@@ -60,15 +122,16 @@
      </div>
      <div class="col-md-7">
       <div class="info">
-        <p>Jai Hind Security and Allied Services is a multi-facet Security agency that was established in the year 2015 with merely a handful of dedicated personnel of security guards and gunmen personally handpicked by its team. In the last few years, the number has increased while not compromising the quality of service and a sense of responsibility towards duty.</p> 
+        <p><b>Jai Hind Security and Allied Services</b> is a multi-facet Security agency that was established in the year 2015 with merely a handful of dedicated personnel of security guards and gunmen personally handpicked by its team. In the last few years, the number has increased while not compromising the quality of service and a sense of responsibility towards duty.</p> 
         <p>At present we own an effective workforce of security guards and gunman bbesides a variety of other personnel deployed on turnkey basis from time to time. In a short span of a few years, the achievements of "Jai Hind Security and Allied Services" and unmatched.</p>
         <p>Expertise and modus operandi has generated confidence in our clients and is considered at par amongst the leading security agencies.</p>
-        <a href="#" class="btn btn-primary px-4">Read More</a>
+        <a href="/about-us.html" class="btn btn-primary px-4">Read More</a>
       </div>
      </div>
    </div>
  </div>
 </section>
+
 
 <section class="our_services">
  <div class="container">
@@ -77,35 +140,43 @@
    <p>The Variety of services we provide is wide and exclusive and can be generally categorized as follows:</p>
   </div>
   <div class="row mt-3">
-    <div class="col-md-3">
+    <div class="col-md-3 ">
      <div class="s_box text-center">
-      <div class="icon_box">
-        <img src="images/uniform_security.png" alt=""/>
-      </div>
       <h4>Uniform Security<br/> Personnel</h4>
      </div>
     </div>
     <div class="col-md-3">
      <div class="s_box text-center">
-      <div class="icon_box">
-        <img src="images/complete_security.png" alt=""/>
-      </div>
       <h4>Complete Security<br/> System</h4>
      </div>
     </div>
     <div class="col-md-3">
      <div class="s_box text-center">
-      <div class="icon_box">
-        <img src="images/event_security.png" alt=""/>
-      </div>
       <h4>Executive Protection<br/> Programme</h4>
      </div>
     </div>
     <div class="col-md-3">
      <div class="s_box text-center">
-      <div class="icon_box">
-        <img src="images/event_security.png" alt=""/>
-      </div>
+      <h4>Event<br/> Security</h4>
+     </div>
+    </div>
+    <div class="col-md-3 ">
+     <div class="s_box text-center">
+      <h4>Uniform Security<br/> Personnel</h4>
+     </div>
+    </div>
+    <div class="col-md-3">
+     <div class="s_box text-center">
+      <h4>Complete Security<br/> System</h4>
+     </div>
+    </div>
+    <div class="col-md-3">
+     <div class="s_box text-center">
+      <h4>Executive Protection<br/> Programme</h4>
+     </div>
+    </div>
+    <div class="col-md-3">
+     <div class="s_box text-center">
       <h4>Event<br/> Security</h4>
      </div>
     </div>
@@ -113,17 +184,99 @@
  </div>
 </section>
 
- <footer>
+<section class="our_clients text-center">
+  <div class="container">
+    <div class="heading text-center">
+     <h3>Our Clients</h3>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+      <div class="col-md-4">
+        <h2>A</h2>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="why_choose_us text-center">
+ <div class="container">
+   <div class="heading text-center">
+    <h3>Why Choose Us</h3>
+    <p>Lorem ipsum dolor sit amet constructor lorem ipsum dolor sit amet.</p>
+   </div>
+   <div class="row mt-5">
+    <div class="col-md-4">
+      <div class="icon_box"><i class="fa fa-clock"></i></div>
+      <h2>25 YEARS<br/> OF EXPERIENCES</h2>
+    </div>
+    <div class="col-md-4">
+      <div class="icon_box"><i class="fa fa-guard"></i></div>
+      <h2>SELF MOTIVATED<br/> GUARDS</h2>
+    </div>
+    <div class="col-md-4">
+      <div class="icon_box"><i class="fa fa-security"></i></div>
+      <h2>LATEST<br/> SECURITY TECHNIQUES</h2>
+    </div>
+   </div>
+ </div>
+</section>
+
+ <footer class="pt-5 pb-4">
   <div class="container">
    <div class="row">
-     <div class="col-md-8">
-      <p class="m-0">Copyright <span onload="this.value=new Date().getFullYear()"></span> Jai Hind Security and Allied Services.</p>
+    <div class="col-md-4 text-center text-md-start mb-4 mb-md-0">
+     <div class="d-inline-block text-center">
+      <img src="images/JHSAS_logo_2.png" alt="JHSAS" class="img-fluid" />
+      <h2 class="fs-4 mt-3">Jai Hind Security &<br/> Allied Services</h2>
+      <div class="social_icons mt-4">
+       <a href="#" class="fb"><i class="fab fa-facebook"></i></a>
+       <a href="#" class="tw"><i class="fab fa-twitter"></i></a>
+      </div>
      </div>
     </div>
+    <div class="col-md-4">
+     <h4 class="mb-3">Head Office</h4>
+     <address>CB-89, Ground Floor Behind Aggarwal Sweet House Ring Road Naraina, New Delhi - 110028</address>
+     <h4 class="my-3">Branch Office</h4>
+     <address><b>Ghaziabad</b><br/>UGF 4, Jaina Tower, A-23, RDC, Rajnagar Ghaziabad 201002</address>
+     <address><b>Gurugram</b><br/>House No 31, Shani Enclave, Maruti Kunj, Gurugram 122102</address>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-3 contact_">
+     <h4 class="mb-3">Contact</h4>
+     <p><i class="fa fa-mobile"></i> <a href="tel:8595161181">8595161181</a></p>
+     <p><i class="fa fa-mobile"></i> <a href="tel:9213460933">9213460933</a></p>  
+     <p><i class="fa fa-phone"></i> <a href="tel:91-11-25777688">91-11-25777688</a></p>
+     <p><i class="fa fa-envelope"></i> <a href="mailto:jaihindss2014@gmail.com">jaihindss2014@gmail.com</a></p>
+    </div>
+   </div>
+  </div>
+   <hr class="my-4" />
+  <div class="container text-center">
+   <p class="m-0">Copyright <span id="c_year"></span> Jai Hind Security and Allied Services.</p>
   </div>
  </footer>
 
 <script src="bootstrap/js/bootstrap.min.js"></script>
-
+<script>
+ document.getElementById('c_year').innerHTML=new Date().getFullYear();
+</script>
 </body>
 </html>
