--- a/thanks.html
+++ b/thanks.html
@@ -107,159 +107,10 @@
 
 <section class="about_us">
  <div class="container">
-   <div class="row">
-    <div class="col-md-5"></div>
-    <div class="col-md-7">
-      <div class="heading mb-3">
-        <h2>About US</h2>
-      </div>
+    <div class="text-center py-3">
+      <h2>Thanks for submitting the form!</h2>
+      <p>One of our agent will connect with you soon.</p>
     </div>
-   </div>
-   <div class="row align-items-center">
-     <div class="col-md-5">
-       <div class="image_box">
-        <img src="images/about_us_.jpg" alt="about" class="img-fluid"/>
-       </div>
-     </div>
-     <div class="col-md-7">
-      <div class="info">
-        <p><b>Jai Hind Security and Allied Services</b> is a multi-facet Security agency that was established in the year 2015 with merely a handful of dedicated personnel of security guards and gunmen personally handpicked by its team. In the last few years, the number has increased while not compromising the quality of service and a sense of responsibility towards duty.</p> 
-        <p>At present we own an effective workforce of security guards and gunman bbesides a variety of other personnel deployed on turnkey basis from time to time. In a short span of a few years, the achievements of "Jai Hind Security and Allied Services" and unmatched.</p>
-        <p>Expertise and modus operandi has generated confidence in our clients and is considered at par amongst the leading security agencies.</p>
-        <a href="/about-us.html" class="btn btn-primary px-4">Read More</a>
-      </div>
-     </div>
-   </div>
- </div>
-</section>
-
-
-<section class="our_services">
- <div class="container">
-  <div class="heading text-center">
-   <h2>Services We Provide</h2>
-   <p>The Variety of services we provide is wide and exclusive and can be generally categorized as follows:</p>
-  </div>
-  <div class="row mt-3">
-    <div class="col-md-3 ">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-policeman"></i>
-      </div>
-      <h4>Uniform Security<br/> Personnel</h4>
-     </div>
-    </div>
-    <div class="col-md-3">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-shield"></i>
-      </div>
-      <h4>Complete Security<br/> System</h4>
-     </div>
-    </div>
-    <div class="col-md-3">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-policeman-1"></i>
-      </div>
-      <h4>Executive Protection<br/> Programme</h4>
-     </div>
-    </div>
-    <div class="col-md-3">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-walkie-talkie"></i>
-      </div>
-      <h4>Event<br/> Security</h4>
-     </div>
-    </div>
-    <div class="col-md-3 ">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-shield"></i>
-      </div>
-      <h4>Uniform Security<br/> Personnel</h4>
-     </div>
-    </div>
-    <div class="col-md-3">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-shield"></i>
-      </div>
-      <h4>Complete Security<br/> System</h4>
-     </div>
-    </div>
-    <div class="col-md-3">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-shield"></i>
-      </div>
-      <h4>Executive Protection<br/> Programme</h4>
-     </div>
-    </div>
-    <div class="col-md-3">
-     <div class="s_box text-center">
-      <div class="s_icon_box">
-        <i class="flaticonicon flaticon-shield"></i>
-      </div>
-      <h4>Event<br/> Security</h4>
-     </div>
-    </div>
-  </div>
- </div>
-</section>
-
-<section class="our_clients text-center">
-  <div class="container">
-    <div class="heading text-center">
-     <h3>Our Clients</h3>
-    </div>
-    <div class="row mt-5">
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="why_choose_us text-center">
- <div class="container">
-   <div class="heading text-center">
-    <h3>Why Choose Us</h3>
-    <p>Lorem ipsum dolor sit amet constructor lorem ipsum dolor sit amet.</p>
-   </div>
-   <div class="row mt-5">
-    <div class="col-md-4">
-      <div class="icon_box"><i class="fa fa-clock"></i></div>
-      <h2>25 YEARS<br/> OF EXPERIENCES</h2>
-    </div>
-    <div class="col-md-4">
-      <div class="icon_box"><i class="fa fa-guard"></i></div>
-      <h2>SELF MOTIVATED<br/> GUARDS</h2>
-    </div>
-    <div class="col-md-4">
-      <div class="icon_box"><i class="fa fa-security"></i></div>
-      <h2>LATEST<br/> SECURITY TECHNIQUES</h2>
-    </div>
-   </div>
  </div>
 </section>
 
