--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
 </head>
 <body>
 
@@ -62,7 +63,7 @@
     <h2>CONTACT US FOR INQUIRY</h2>
    </div>
    <div class="enquiry_form mt-4">
-    <form>
+    <!-- <form>
       <div class="row">
         <div class="col-md-6 mb-4">
           <div class="form-floating">
@@ -99,11 +100,48 @@
         </div>
 
       </div>
-    </form>
+    </form> -->
+    <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/embed/v2.js"></script>
+<script>
+  hbspt.forms.create({
+    region: "na1",
+    portalId: "23518646",
+    formId: "1db5b880-b3a6-49a8-b1a5-e691ebbd46f3"
+  });
+</script>
    </div>
   </div>
  </div>
 </section>
+
+<script>
+$(document).ready(function(){
+  var head = jQuery("#hs-form-iframe-0").contents().find("head");
+  var css = '<style type="text/css">' +
+          '.hubspot-link__container{display:none}; ' +
+  '</style>';
+jQuery(head).append(css);
+});
+
+</script>
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+  var frameListener;
+  $(window).load(function () {
+      frameListener = setInterval("frameLoaded()", 50);
+  });
+  function frameLoaded() {
+      var frame = $('iframe').get(0);
+      if (frame != null) {
+          var frmHead = $(frame).contents().find('head');
+          if (frmHead != null) {
+              clearInterval(frameListener); // stop the listener
+              frmHead.append($('style, link[rel=stylesheet]').clone()); // clone existing css link
+              //frmHead.append($("<link/>", { rel: "stylesheet", href: "/css/style.css", type: "text/css" })); // or create css link yourself
+          }
+      }
+  }
+  </script>
 
 <section class="about_us">
  <div class="container">
@@ -214,28 +252,27 @@
     <div class="heading text-center">
      <h3>Our Clients</h3>
     </div>
-    <div class="row mt-5">
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
-      <div class="col-md-4">
-        <h2>A</h2>
-      </div>
+    <div class="our-clients-table mt-3">
+      <table class="table table-striped table-responsive table-bordered">
+       <tr><th>Client</th><th>Location</th></tr>
+       <tr><td>Hope Hall Foundation School</td><td>Sector 7 R K Puram</td></tr>
+       <tr><td>Evergreen Public School</td><td>Ring Road Naraina New Delhi</td></tr>
+       <tr><td>Gehna Public School</td><td>New Ranjit Nagar New Delhi</td></tr>
+       <tr><td>Child Villa Public School</td><td>Pandava Nagar New Delhi</td></tr>
+       <tr><td>Sinage India Limited</td><td>Naraina Industrial Area New Delhi</td></tr>
+       <tr><td>RWA Shivaji Enclave</td><td>Rajouri Garden</td></tr>
+       <tr><td>Vikram Batra Vihar</td><td>CVD Line Delhi Cantt</td></tr>
+       <tr><td>RR Colony C/o Army Camp</td><td>Ring Road RR Line Delhi Cantt</td></tr>
+       <tr><td>RWA Army Qtr C/o EETSU </td><td>Todapur Delhi Cantt</td></tr>
+       <tr><td>Subramanium Line C/o ESD</td><td>Subramanium Line Delhi Cantt</td></tr>
+       <tr><td>1WEC Line</td><td>IWEC Delhi Cantt</td></tr>
+       <tr><td>RWA Piru Vihar </td><td>Piru Vihar Delhi Cantt</td></tr>
+       <tr><td>Ganpati Synthetic Ltd </td><td>Mawana Road Meerut (UP)</td></tr>
+       <tr><td>Surya Overseas Pvt Ltd</td><td>Chaprola Ghaziabad (UP)</td></tr>
+       <tr><td>Sri Sai Nath Apartment Society</td><td>Sector 28 Rohini New Delhi</td></tr>
+       <tr><td>Jeet Construction</td><td>Meerut Cantt, UP</td></tr>
+       <tr><td>Jindal Fabrics Pvt Ltd</td><td>Muradnagar, Ghaziabad</td></tr>
+      </table>
     </div>
   </div>
 </section>
@@ -248,15 +285,15 @@
    </div>
    <div class="row mt-5">
     <div class="col-md-4">
-      <div class="icon_box"><i class="fa fa-clock"></i></div>
+      <div class="icon_box"><i class="icon flaticon-hourglass"></i></div>
       <h2>25 YEARS<br/> OF EXPERIENCES</h2>
     </div>
     <div class="col-md-4">
-      <div class="icon_box"><i class="fa fa-guard"></i></div>
+      <div class="icon_box"><i class="icon flaticon-light-bulb-on"></i></div>
       <h2>SELF MOTIVATED<br/> GUARDS</h2>
     </div>
     <div class="col-md-4">
-      <div class="icon_box"><i class="fa fa-security"></i></div>
+      <div class="icon_box"><i class="icon flaticon-anchor-1"></i></div>
       <h2>LATEST<br/> SECURITY TECHNIQUES</h2>
     </div>
    </div>
@@ -303,5 +340,8 @@
 <script>
  document.getElementById('c_year').innerHTML=new Date().getFullYear();
 </script>
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="https://js-na1.hs-scripts.com/20373446.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
