--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
  <header id="header">
    <nav class="navbar navbar-expand-lg">
     <div class="container">
-     <a class="navbar-brand" href="#"><img src="images/jhsas_logo.png" alt="JHSSAS"/></a>
+     <a class="navbar-brand" href="/"><img src="images/jhsas_logo.png" alt="JHSSAS"/></a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuDropdown"><span class="navbar-toggler-icon"></span></button>
      <div class="collapse navbar-collapse" id="menuDropdown">
        <ul class="navbar-nav d-flex justify-content-end w-100">
          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
          <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
-         <li class="nav-item"><a href="#" class="nav-link">Our Services</a></li>
-         <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+         <li class="nav-item"><a href="/our-services.html" class="nav-link">Our Services</a></li>
+         <li class="nav-item"><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
        </ul>
      </div>
     </div>
@@ -41,8 +41,8 @@
        <div class="row align-items-center">
         <div class="col-md-5">
           <div class="intro">
-            <h1>Your Security is our priority.</h1>
-            <p>Lorem ipusm dolor sit amet constructor.</p>
+            <h1>Jai Hind Security and Allied Services</h1>
+            <p>Your Security is our priority.</p>
             <a href="/contact-us.html" class="btn btn-primary px-4 py-2">Contact Us</a>
           </div>
         </div>
@@ -101,29 +101,20 @@
 
       </div>
     </form> -->
+    
     <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/embed/v2.js"></script>
-<script>
-  hbspt.forms.create({
-    region: "na1",
-    portalId: "23518646",
-    formId: "1db5b880-b3a6-49a8-b1a5-e691ebbd46f3"
-  });
-</script>
+    <script>
+     hbspt.forms.create({
+      region: "na1",
+      portalId: "23518646",
+      formId: "1db5b880-b3a6-49a8-b1a5-e691ebbd46f3"
+     });
+    </script>
    </div>
   </div>
  </div>
 </section>
 
-<script>
-$(document).ready(function(){
-  var head = jQuery("#hs-form-iframe-0").contents().find("head");
-  var css = '<style type="text/css">' +
-          '.hubspot-link__container{display:none}; ' +
-  '</style>';
-jQuery(head).append(css);
-});
-
-</script>
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js" type="text/javascript"></script>
 <script type="text/javascript">
   var frameListener;
@@ -264,14 +255,14 @@ jQuery(head).append(css);
        <tr><td>Vikram Batra Vihar</td><td>CVD Line Delhi Cantt</td></tr>
        <tr><td>RR Colony C/o Army Camp</td><td>Ring Road RR Line Delhi Cantt</td></tr>
        <tr><td>RWA Army Qtr C/o EETSU </td><td>Todapur Delhi Cantt</td></tr>
-       <tr><td>Subramanium Line C/o ESD</td><td>Subramanium Line Delhi Cantt</td></tr>
-       <tr><td>1WEC Line</td><td>IWEC Delhi Cantt</td></tr>
-       <tr><td>RWA Piru Vihar </td><td>Piru Vihar Delhi Cantt</td></tr>
-       <tr><td>Ganpati Synthetic Ltd </td><td>Mawana Road Meerut (UP)</td></tr>
-       <tr><td>Surya Overseas Pvt Ltd</td><td>Chaprola Ghaziabad (UP)</td></tr>
-       <tr><td>Sri Sai Nath Apartment Society</td><td>Sector 28 Rohini New Delhi</td></tr>
-       <tr><td>Jeet Construction</td><td>Meerut Cantt, UP</td></tr>
-       <tr><td>Jindal Fabrics Pvt Ltd</td><td>Muradnagar, Ghaziabad</td></tr>
+        <tr><td>Subramanium Line C/o ESD</td><td>Subramanium Line Delhi Cantt</td></tr>
+        <tr><td>1WEC Line</td><td>IWEC Delhi Cantt</td></tr>
+        <tr><td>RWA Piru Vihar </td><td>Piru Vihar Delhi Cantt</td></tr>
+        <tr><td>Ganpati Synthetic Ltd </td><td>Mawana Road Meerut (UP)</td></tr>
+        <tr><td>Surya Overseas Pvt Ltd</td><td>Chaprola Ghaziabad (UP)</td></tr>
+        <tr><td>Sri Sai Nath Apartment Society</td><td>Sector 28 Rohini New Delhi</td></tr>
+        <tr><td>Jeet Construction</td><td>Meerut Cantt, UP</td></tr>
+        <tr><td>Jindal Fabrics Pvt Ltd</td><td>Muradnagar, Ghaziabad</td></tr>
       </table>
     </div>
   </div>
@@ -341,7 +332,7 @@ jQuery(head).append(css);
  document.getElementById('c_year').innerHTML=new Date().getFullYear();
 </script>
 <!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="https://js-na1.hs-scripts.com/20373446.js"></script>
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/23518646.js"></script>
 <!-- End of HubSpot Embed Code -->
 </body>
 </html>
