--- a/thanks.html
+++ b/thanks.html
@@ -18,7 +18,7 @@
  <header id="header">
    <nav class="navbar navbar-expand-lg">
     <div class="container">
-     <a class="navbar-brand" href="#"><img src="images/jhsas_logo.png" alt="JHSSAS"/></a>
+     <a class="navbar-brand" href="/"><img src="images/jhsas_logo.png" alt="JHSSAS"/></a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuDropdown"><span class="navbar-toggler-icon"></span></button>
      <div class="collapse navbar-collapse" id="menuDropdown">
        <ul class="navbar-nav d-flex justify-content-end w-100">
@@ -154,5 +154,8 @@
 <script>
  document.getElementById('c_year').innerHTML=new Date().getFullYear();
 </script>
+<!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/23518646.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
