--- a/our-services.html
+++ b/our-services.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="css/flaticon.css" type="text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
        
@@ -41,7 +42,7 @@
   </section>  
 
 <section>
- <div>
+ <div class="container">
     <div class="heading text-center">
         <h2>Services We Provide</h2>
         <p>The Variety of services we provide is wide and exclusive and can be generally categorized as follows:</p>
