--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@
  <div class="container">
    <div class="heading text-center">
     <h3>Why Choose Us</h3>
-    <p>Lorem ipsum dolor sit amet constructor lorem ipsum dolor sit amet.</p>
+    <p>Expertise and modus operandi has generated confidence in our clients and is considered at par amongst the leading security agencies.</p>
    </div>
    <div class="row mt-5">
     <div class="col-md-4">
       <div class="icon_box"><i class="icon flaticon-hourglass"></i></div>
-      <h2>25 YEARS<br/> OF EXPERIENCES</h2>
+      <h2>Army Background<br/> Experience</h2>
     </div>
     <div class="col-md-4">
       <div class="icon_box"><i class="icon flaticon-light-bulb-on"></i></div>
