--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jai Hind Security Services and Allied Services</title>
+    <meta name="description" content="Jai Hind Security and Allied Services</b> is a multi-facet Security agency that was established in the year 2015 with merely a handful of dedicated personnel of security guards and gunmen personally handpicked by its team. In the last few years, the number has increased while not compromising the quality of service and a sense of responsibility towards duty."/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/flaticon.css" type="text/css" />
@@ -12,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <meta name="google-site-verification" content="et_RZ_NJEfBNrskiSvylo3mDDRJKsKhj8PJaz748Bag" />
     
 </head>
 <body>
