--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jai Hind Security Services and Allied Services</title>
+    <title>Thank You | Jai Hind Security Services and Allied Services</title>
+    <meta name="description" content="Thanks for submitting the form! One of our agent will connect with you soon."/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/flaticon.css" type="text/css" />
@@ -31,79 +32,6 @@
     </div>
    </nav>
  </header>
-
- <section class="banner p-0">
-  <div class="container">
-   <div class="carousel slide" data-bs-ride="carousel">
-     <div class="carousel-inner">
-      <div class="carousel-item active p-4">
-       <div class="row align-items-center">
-        <div class="col-md-5">
-          <div class="intro">
-            <h1>Your Security is our priority.</h1>
-            <p>Lorem ipusm dolor sit amet constructor.</p>
-            <a href="/contact-us.html" class="btn btn-primary px-4 py-2">Contact Us</a>
-          </div>
-        </div>
-        <div class="col-md-7">
-          <img src="images/jhsas_banner_1.jpg" alt="Banner-1" class="img-fluid"/>
-        </div>
-       </div>
-      </div>
-     </div>
-   </div>
-  </div>
- </section>
-
-<section class="enquiry_now_sec">
- <div class="container">
-  <div class="enquiry_form_wrap">
-   <div class="heading text-center">
-    <h2>CONTACT US FOR INQUIRY</h2>
-   </div>
-   <div class="enquiry_form mt-4">
-    <form>
-      <div class="row">
-        <div class="col-md-6 mb-4">
-          <div class="form-floating">
-            <input type="text" name="fname" placeholder="First Name" class="form-control" required/>
-            <label>First Name</label>
-          </div>
-        </div>
-        <div class="col-md-6 mb-4">
-          <div class="form-floating">
-            <input type="text" name="lname" placeholder="Last Name" class="form-control" required/>
-            <label>Last Name</label>
-          </div>
-        </div>
-        <div class="col-md-6 mb-4">
-          <div class="form-floating">
-            <input type="email" name="email" placeholder="Email" class="form-control" required/>
-            <label>Email</label>
-          </div>
-        </div>
-        <div class="col-md-6 mb-4">
-          <div class="form-floating">
-            <input type="tel" name="phone" placeholder="Phone" class="form-control" required/>
-            <label>Phone</label>
-          </div>
-        </div>
-        <div class="col-12 mb-4">
-          <div class="form-floating">
-            <textarea name="message" placeholder="Message" class="form-control"></textarea>
-            <label>Message</label>
-          </div>
-        </div>
-        <div class="col-12 text-center">
-          <button class="btn btn-primary px-5 py-2">Submit</button>
-        </div>
-
-      </div>
-    </form>
-   </div>
-  </div>
- </div>
-</section>
 
 <section class="about_us">
  <div class="container">
