--- a/our-services.html
+++ b/our-services.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
        <style>
-        .s_box{
+        .main_services .s_box{
             min-height: 332px;
         }
        </style>
@@ -52,7 +52,7 @@
         <h2>Services We Provide</h2>
         <p>The Variety of services we provide is wide and exclusive and can be generally categorized as follows:</p>
        </div>
-       <div class="row mt-3">
+       <div class="row mt-3 main_services">
          <div class="col-md-4">
           <div class="s_box text-center">
            <div class="s_icon_box">
