--- a/media.html
+++ b/media.html
@@ -1,9 +1,103 @@
-<!doctype html>
-<html>
-<head>
-  <title></title>
-</head>
-  <body>
+
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Jai Hind Security Services and Allied Services</title>
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+       
+    </head>
+    <body>
     
+     <header id="header">
+       <nav class="navbar navbar-expand-lg">
+        <div class="container">
+         <a class="navbar-brand" href="/"><img src="images/jhsas_logo.png" alt="JHSSAS"/></a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuDropdown"><span class="navbar-toggler-icon"></span></button>
+         <div class="collapse navbar-collapse" id="menuDropdown">
+           <ul class="navbar-nav d-flex justify-content-end w-100">
+             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+             <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
+             <li class="nav-item"><a href="/media.html" class="nav-link">Media</a></li>
+             <li class="nav-item"><a href="/our-services.html" class="nav-link">Our Services</a></li>
+             <li class="nav-item"><a href="/contact-us.html" class="nav-link active">Contact Us</a></li>
+           </ul>
+         </div>
+        </div>
+       </nav>
+     </header>
+
+ <section class="page_title_sec">
+   <div class="container">
+     <div class="text-center">
+       <h2>Media</h2>
+     </div>
+     <div class="row">
+        <div class="col-md-4 mb-4">
+      <img src="images/2023-04-09 (1).jpg" class="img-fluid" alt="Image 1">
+    </div>
+
+    <!-- Image 2 -->
+    <div class="col-md-4 mb-4">
+      <img src="images/2023-04-09 (2).jpg" class="img-fluid" alt="Image 2">
+    </div>
+
+    <!-- Image 3 -->
+    <div class="col-md-4 mb-4">
+      <img src="images/2023-04-09.jpg" class="img-fluid" alt="Image 3">
+    </div>
+     </div>
+   </div>
+ </section>    
+
+
+
+<footer class="pt-5 pb-4">
+    <div class="container">
+     <div class="row">
+      <div class="col-md-4 text-center text-md-start mb-4 mb-md-0">
+       <div class="d-inline-block text-center">
+        <img src="images/JHSAS_logo_2.png" alt="JHSAS" class="img-fluid" />
+        <h2 class="fs-4 mt-3">Jai Hind Security &<br/> Allied Services</h2>
+        <div class="social_icons mt-4">
+         <a href="#" class="fb"><i class="fab fa-facebook"></i></a>
+         <a href="#" class="tw"><i class="fab fa-twitter"></i></a>
+        </div>
+       </div>
+      </div>
+      <div class="col-md-4">
+       <h4 class="mb-3">Head Office</h4>
+       <address>CB-89, Ground Floor Behind Aggarwal Sweet House Ring Road Naraina, New Delhi - 110028</address>
+       <h4 class="my-3">Branch Office</h4>
+       <address><b>Ghaziabad</b><br/>UGF 4, Jaina Tower, A-23, RDC, Rajnagar Ghaziabad 201002</address>
+       <address><b>Gurugram</b><br/>House No 31, Shani Enclave, Maruti Kunj, Gurugram 122102</address>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-3 contact_">
+       <h4 class="mb-3">Contact</h4>
+       <p><i class="fa fa-mobile"></i> <a href="tel:8595161181">8595161181</a></p>
+       <p><i class="fa fa-mobile"></i> <a href="tel:9213460933">9213460933</a></p>  
+       <p><i class="fa fa-phone"></i> <a href="tel:91-11-25777688">91-11-25777688</a></p>
+       <p><i class="fa fa-envelope"></i> <a href="mailto:jaihindss2014@gmail.com">jaihindss2014@gmail.com</a></p>
+      </div>
+     </div>
+    </div>
+     <hr class="my-4" />
+    <div class="container text-center">
+     <p class="m-0">Copyright <span id="c_year"></span> Jai Hind Security and Allied Services.</p>
+    </div>
+   </footer>
+  
+  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script>
+   document.getElementById('c_year').innerHTML=new Date().getFullYear();
+  </script>
+
   </body>
-</html>
+  </html>
