--- a/media.html
+++ b/media.html
@@ -45,6 +45,12 @@
     width: 100%;
     max-width: none;
 }
+#media_modal .modal-dialog{
+  max-width: 800px;
+}
+#media_modal img{
+  width: 100%;
+}
 </style>
  <section class="media_section">
    <div class="container">
