--- a/media.html
+++ b/media.html
@@ -148,7 +148,7 @@
    </footer>
   
   <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
    document.getElementById('c_year').innerHTML=new Date().getFullYear();
 
