--- a/media.html
+++ b/media.html
@@ -153,7 +153,7 @@
    document.getElementById('c_year').innerHTML=new Date().getFullYear();
 
 $('.m_box').click(function(){
-  $('#media_popup_img').attr("src", $(this).find('img').attr('src');
+  $('#media_popup_img').attr("src", $(this).find('img').attr('src'));
 });
   </script>
 
