--- a/contact-us.html
+++ b/contact-us.html
@@ -25,6 +25,7 @@
              <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
              <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
              <li class="nav-item"><a href="/our-services.html" class="nav-link">Our Services</a></li>
+               <li class="nav-item"><a href="/media.html" class="nav-link">Media</a></li>
              <li class="nav-item"><a href="/contact-us.html" class="nav-link active">Contact Us</a></li>
            </ul>
          </div>
