--- a/about-us.html
+++ b/about-us.html
@@ -26,6 +26,7 @@
              <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
              <li class="nav-item"><a href="/about-us.html" class="nav-link active">About Us</a></li>
              <li class="nav-item"><a href="/our-services.html" class="nav-link">Our Services</a></li>
+               <li class="nav-item"><a href="/media.html" class="nav-link">Media</a></li>
              <li class="nav-item"><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
            </ul>
          </div>
