--- a/thanks.html
+++ b/thanks.html
@@ -26,6 +26,7 @@
          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
          <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
          <li class="nav-item"><a href="#" class="nav-link">Our Services</a></li>
+           <li class="nav-item"><a href="/media.html" class="nav-link">Media</a></li>
          <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
        </ul>
      </div>
