--- a/media.html
+++ b/media.html
@@ -57,16 +57,12 @@
      <div class="text-center">
        <h2>Media</h2>
      </div>
-     <div class="row">
+     <div class="row mt-4">
 
       <div class="col-md-4 mb-4">
         <div class="m_box" data-bs-target="#media_modal" data-bs-toggle="modal"><img src="images/2023-12-20 (2).jpg" class="img-fluid" alt="Image 2"></div>
     </div>
 
-    <!-- Image 3 -->
-    <div class="col-md-4 mb-4">
-        <div class="m_box" data-bs-target="#media_modal" data-bs-toggle="modal"><img src="images/2023-12-20 (3).jpg" class="img-fluid" alt="Image 3"></div>
-    </div>
     <div class="col-md-4 mb-4">
         <div class="m_box" data-bs-target="#media_modal" data-bs-toggle="modal"><img src="images/2023-12-20.jpg" class="img-fluid" alt="Image 3"></div>
      </div>
@@ -132,7 +128,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
