--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <h2>CONTACT US FOR INQUIRY</h2>
    </div>
    <div class="enquiry_form mt-4">
+    <iframe aria-label='CONTACT US FOR INQUIRY' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/mushirkhanmob/form/JHSASCONTACTFORN/formperma/F-URDFj4WJfQqp8o7NolHzV-t41cXEC9vnz0qA1RM9g'></iframe>
     <!-- <form>
       <div class="row">
         <div class="col-md-6 mb-4">
@@ -105,14 +106,6 @@
       </div>
     </form> -->
     
-    <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/embed/v2.js"></script>
-    <script>
-     hbspt.forms.create({
-      region: "na1",
-      portalId: "23518646",
-      formId: "1db5b880-b3a6-49a8-b1a5-e691ebbd46f3"
-     });
-    </script>
    </div>
   </div>
  </div>
@@ -284,7 +277,7 @@
      <address>CB-89, Ground Floor Behind Aggarwal Sweet House Ring Road Naraina, New Delhi - 110028</address>
      <h4 class="my-3">Branch Office</h4>
      <address><b>Ghaziabad</b><br/>UGF 4, Jaina Tower, A-23, RDC, Rajnagar Ghaziabad 201002</address>
-     <address><b>Gurugram</b><br/>House No 31, Shani Enclave, Maruti Kunj, Gurugram 122102</address>
+
     </div>
     <div class="col-md-1"></div>
     <div class="col-md-3 contact_">
