--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
     <h2>CONTACT US FOR INQUIRY</h2>
    </div>
    <div class="enquiry_form mt-4">
-    <iframe aria-label='CONTACT US FOR INQUIRY' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/mushirkhanmob/form/JHSASCONTACTFORN/formperma/F-URDFj4WJfQqp8o7NolHzV-t41cXEC9vnz0qA1RM9g'></iframe>
-    <!-- <form>
+   <!-- <iframe aria-label='CONTACT US FOR INQUIRY' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/mushirkhanmob/form/JHSASCONTACTFORN/formperma/F-URDFj4WJfQqp8o7NolHzV-t41cXEC9vnz0qA1RM9g'></iframe> -->
+    <form method="post" action="https://forms.zohopublic.in/mushirkhanmob/form/JHSASCONTACTFORN/formperma/BujaWHoFEq5_EnqCTMqZSXZ2TDI3GoicU0d6WkEzzHU/htmlRecords/submit">
       <div class="row">
         <div class="col-md-6 mb-4">
           <div class="form-floating">
-            <input type="text" name="fname" placeholder="First Name" class="form-control" required/>
+            <input type="text" name="Name_First" placeholder="First Name" class="form-control" required/>
             <label>First Name</label>
           </div>
         </div>
         <div class="col-md-6 mb-4">
           <div class="form-floating">
-            <input type="text" name="lname" placeholder="Last Name" class="form-control" required/>
+            <input type="text" name="Name_Last" placeholder="Last Name" class="form-control" required/>
             <label>Last Name</label>
           </div>
         </div>
@@ -89,13 +89,13 @@
         </div>
         <div class="col-md-6 mb-4">
           <div class="form-floating">
-            <input type="tel" name="phone" placeholder="Phone" class="form-control" required/>
+            <input type="tel" name="PhoneNumber_countrycode" placeholder="Phone" class="form-control" required/>
             <label>Phone</label>
           </div>
         </div>
         <div class="col-12 mb-4">
           <div class="form-floating">
-            <textarea name="message" placeholder="Message" class="form-control"></textarea>
+            <textarea name="MultiLine" placeholder="Message" class="form-control"></textarea>
             <label>Message</label>
           </div>
         </div>
@@ -104,7 +104,7 @@
         </div>
 
       </div>
-    </form> -->
+    </form>
     
    </div>
   </div>
