--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
  <section class="media_section">
    <div class="container">
      <div class="text-center">
-       <h2>Media</h2>
+       <h2>Gallery</h2>
      </div>
      <div class="row mt-4">
 
