--- a/contact-us.html
+++ b/contact-us.html
@@ -25,7 +25,7 @@
              <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
              <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
              <li class="nav-item"><a href="/our-services.html" class="nav-link">Our Services</a></li>
-               <li class="nav-item"><a href="/media.html" class="nav-link">Media</a></li>
+             <li class="nav-item"><a href="/gallery.html" class="nav-link">Gallery</a></li>
              <li class="nav-item"><a href="/contact-us.html" class="nav-link active">Contact Us</a></li>
            </ul>
          </div>
@@ -45,18 +45,44 @@
  <div class="container">
   <div class="row">
    <div class="col-md-6">
-    <div class="">
-    <div class="contact_form mt-4">
-        <script charset="utf-8" type="text/javascript" src="https://js.hsforms.net/forms/embed/v2.js"></script>
-        <script>
-         hbspt.forms.create({
-          region: "na1",
-          portalId: "23518646",
-          formId: "1db5b880-b3a6-49a8-b1a5-e691ebbd46f3"
-         });
-        </script>
-    </div>
-    </div>
+     <form method="post" action="https://forms.zohopublic.in/mushirkhanmob/form/JHSASCONTACTFORN/formperma/BujaWHoFEq5_EnqCTMqZSXZ2TDI3GoicU0d6WkEzzHU/htmlRecords/submit">
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="text" name="Name_First" placeholder="First Name" class="form-control" required/>
+            <label>First Name</label>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="text" name="Name_Last" placeholder="Last Name" class="form-control" required/>
+            <label>Last Name</label>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="email" name="email" placeholder="Email" class="form-control" required/>
+            <label>Email</label>
+          </div>
+        </div>
+        <div class="col-md-6 mb-4">
+          <div class="form-floating">
+            <input type="tel" name="PhoneNumber_countrycode" placeholder="Phone" class="form-control" required/>
+            <label>Phone</label>
+          </div>
+        </div>
+        <div class="col-12 mb-4">
+          <div class="form-floating">
+            <textarea name="MultiLine" placeholder="Message" class="form-control"></textarea>
+            <label>Message</label>
+          </div>
+        </div>
+        <div class="col-12 text-center">
+          <button class="btn btn-primary px-5 py-2">Submit</button>
+        </div>
+
+      </div>
+    </form>
    </div>
    <div class="col-md-6">
     <div class="contact_info">
@@ -64,7 +90,7 @@
       <address>CB-89, Ground Floor Behind Aggarwal Sweet House Ring Road Naraina, New Delhi - 110028</address>
       <h4 class="my-3">Branch Office</h4>
       <address><b>Ghaziabad</b><br/>UGF 4, Jaina Tower, A-23, RDC, Rajnagar Ghaziabad 201002</address>
-      <address><b>Gurugram</b><br/>House No 31, Shani Enclave, Maruti Kunj, Gurugram 122102</address>
+      
       <br/>
 
       <p><i class="fa fa-mobile"></i> <a href="tel:8595161181">8595161181</a></p>
@@ -76,24 +102,7 @@
  
  </div>
 </section>
-<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-  var frameListener;
-  $(window).load(function () {
-      frameListener = setInterval("frameLoaded()", 50);
-  });
-  function frameLoaded() {
-      var frame = $('iframe').get(0);
-      if (frame != null) {
-          var frmHead = $(frame).contents().find('head');
-          if (frmHead != null) {
-              clearInterval(frameListener); // stop the listener
-              frmHead.append($('style, link[rel=stylesheet]').clone()); // clone existing css link
-              //frmHead.append($("<link/>", { rel: "stylesheet", href: "/css/style.css", type: "text/css" })); // or create css link yourself
-          }
-      }
-  }
-  </script>
+
 <footer class="pt-5 pb-4">
     <div class="container">
      <div class="row">
@@ -112,7 +121,7 @@
        <address>CB-89, Ground Floor Behind Aggarwal Sweet House Ring Road Naraina, New Delhi - 110028</address>
        <h4 class="my-3">Branch Office</h4>
        <address><b>Ghaziabad</b><br/>UGF 4, Jaina Tower, A-23, RDC, Rajnagar Ghaziabad 201002</address>
-       <address><b>Gurugram</b><br/>House No 31, Shani Enclave, Maruti Kunj, Gurugram 122102</address>
+       
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-3 contact_">
