--- a/our-services.html
+++ b/our-services.html
@@ -31,7 +31,7 @@
              <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
              <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
              <li class="nav-item"><a href="/our-services.html" class="nav-link">Our Services</a></li>
-               <li class="nav-item"><a href="/media.html" class="nav-link">Media</a></li>
+             <li class="nav-item"><a href="/gallery.html" class="nav-link">Gallery</a></li>
              <li class="nav-item"><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
            </ul>
          </div>
@@ -180,7 +180,7 @@
        <address>CB-89, Ground Floor Behind Aggarwal Sweet House Ring Road Naraina, New Delhi - 110028</address>
        <h4 class="my-3">Branch Office</h4>
        <address><b>Ghaziabad</b><br/>UGF 4, Jaina Tower, A-23, RDC, Rajnagar Ghaziabad 201002</address>
-       <address><b>Gurugram</b><br/>House No 31, Shani Enclave, Maruti Kunj, Gurugram 122102</address>
+       
       </div>
       <div class="col-md-1"></div>
       <div class="col-md-3 contact_">
